fix: ajusta el z-index del botón flotante a 900

--- a/src/styles/components/_floating-button.scss
+++ b/src/styles/components/_floating-button.scss
@@ -4,7 +4,7 @@
 
 .floating-button {
   width: auto;
-  z-index: 800;
+  z-index: 900;
   position: fixed;
   bottom: 2rem;
   right: 1.5rem;
